--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
-    "@types/react": "^17.0.2",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,12 +19,10 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "setup": "npm i --legacy-peer-deps",
     "build": "rollup -c",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +42,10 @@
       "last 1 safari version"
     ]
   },
+  "peerDependencies": {
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@rollup/plugin-commonjs": "^17.1.0",
@@ -51,11 +53,16 @@
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
+    "@storybook/node-logger": "^6.1.21",
+    "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.21",
     "babel-loader": "^8.2.2",
     "fork-ts-checker-webpack-plugin": "^4.1.6",
+    "node-sass": "^5.0.0",
     "react-docgen-typescript-plugin": "^0.6.3",
     "rollup": "^2.40.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.2"
   }
