--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "setup": "npm i --legacy-peer-deps",
     "build": "rollup -c",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "start": "npm run storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +49,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-actions": "^6.1.21",
@@ -58,6 +61,7 @@
     "@storybook/react": "^6.1.21",
     "babel-loader": "^8.2.2",
     "fork-ts-checker-webpack-plugin": "^4.1.6",
+    "husky": "^5.1.3",
     "node-sass": "^5.0.0",
     "react-docgen-typescript-plugin": "^0.6.3",
     "rollup": "^2.40.0",
