--- a/package.json
+++ b/package.json
@@ -48,9 +48,13 @@
     "@types/react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-actions": "^6.1.21",
@@ -60,13 +64,17 @@
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.21",
     "babel-loader": "^8.2.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "fork-ts-checker-webpack-plugin": "^4.1.6",
     "husky": "^5.1.3",
     "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "react-docgen-typescript-plugin": "^0.6.3",
     "rollup": "^2.40.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-import-css": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.2"
   }
