--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "rimraf dist/** && rollup -c",
     "test": "jest",
     "lint": "eslint --fix ./src",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "sb": "start-storybook -p 6006",
+    "build-docs": "build-storybook -o docs/storybook"
   },
   "repository": {
     "type": "git",
@@ -83,6 +83,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.45.1",
     "sass-loader": "^12.3.0",
+    "storybook-dark-mode": "^1.0.8",
     "style-loader": "^3.3.1",
     "typescript": "^4.4.4"
   }
