--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "vitest",
+    "test": "bun test",
     "check": "biome check ./lib --apply",
     "sb": "storybook dev -p 6006",
     "prepublishOnly": "bun run build",
@@ -34,8 +34,7 @@
     "url": "git+https://github.com/ImJeevesh/fluidity.git"
   },
   "engines": {
-    "bun": ">=1.1.3",
-    "npm": "use_bun_instead",
+    "bun": ">=1.1.10",
     "yarn": "use_bun_instead"
   },
   "author": "Jeevesh",
@@ -50,29 +49,30 @@
     "react-dom": ">=18.2.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.6.4",
-    "@chromatic-com/storybook": "^1.2.25",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/addon-onboarding": "^8.0.5",
-    "@storybook/blocks": "^8.0.5",
-    "@storybook/react": "^8.0.5",
-    "@storybook/react-vite": "^8.0.5",
-    "@storybook/test": "^8.0.5",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.0.0",
-    "@types/bun": "^1.0.12",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
-    "@vitejs/plugin-react": "^4.2.1",
-    "react-test-renderer": "^18.2.0",
-    "sass": "^1.74.1",
-    "storybook": "^8.0.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.8.1",
-    "vite-plugin-lib-inject-css": "^2.0.1"
+    "@biomejs/biome": "^1.7.3",
+    "@chromatic-com/storybook": "^1.4.0",
+    "@happy-dom/global-registrator": "^14.11.0",
+    "@storybook/addon-essentials": "^8.1.3",
+    "@storybook/addon-interactions": "^8.1.3",
+    "@storybook/addon-links": "^8.1.3",
+    "@storybook/addon-onboarding": "^8.1.3",
+    "@storybook/blocks": "^8.1.3",
+    "@storybook/react": "^8.1.3",
+    "@storybook/react-vite": "^8.1.3",
+    "@storybook/test": "^8.1.3",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/bun": "^1.1.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "react-test-renderer": "^18.3.1",
+    "sass": "^1.77.2",
+    "storybook": "^8.1.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-lib-inject-css": "^2.1.1"
   },
   "trustedDependencies": [
     "@biomejs/biome"
