--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "test": "bun test",
-    "check": "biome check ./lib --apply",
+    "check": "biome check ./lib --write",
     "sb": "storybook dev -p 6006",
     "prepublishOnly": "bun run build",
     "build": "tsc --p ./tsconfig.lib.json && vite build",
@@ -44,34 +44,34 @@
   },
   "homepage": "https://github.com/ImJeevesh/fluidity#readme",
   "peerDependencies": {
-    "@bem-react/classname": ">=1.5.12",
+    "@bem-react/classname": ">=1.6.0",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.7.3",
-    "@chromatic-com/storybook": "^1.4.0",
-    "@happy-dom/global-registrator": "^14.11.0",
-    "@storybook/addon-essentials": "^8.1.3",
-    "@storybook/addon-interactions": "^8.1.3",
-    "@storybook/addon-links": "^8.1.3",
-    "@storybook/addon-onboarding": "^8.1.3",
-    "@storybook/blocks": "^8.1.3",
-    "@storybook/react": "^8.1.3",
-    "@storybook/react-vite": "^8.1.3",
-    "@storybook/test": "^8.1.3",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/bun": "^1.1.3",
-    "@types/react": "^18.3.3",
+    "@biomejs/biome": "^1.8.3",
+    "@chromatic-com/storybook": "^1.9.0",
+    "@happy-dom/global-registrator": "^15.7.3",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/bun": "^1.1.8",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "react-test-renderer": "^18.3.1",
-    "sass": "^1.77.2",
-    "storybook": "^8.1.3",
+    "sass": "^1.78.0",
+    "storybook": "^8.2.9",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-plugin-dts": "^3.9.1",
+    "vite": "^5.4.3",
+    "vite-plugin-dts": "^4.1.1",
     "vite-plugin-lib-inject-css": "^2.1.1"
   },
   "trustedDependencies": [
